fix recipe add form

--- a/client/partials/recipes/create.html
+++ b/client/partials/recipes/create.html
@@ -1,5 +1,5 @@
 <h1>Create Recipe</h1>
-<form class="form-horizontal" name="postForm" ng-submit="submit_post(data.name, data.beertype)" novalidate>
+<form class="form-horizontal" name="postForm" ng-submit="submit_recipe(data.name, data.beertype)" novalidate>
     <div class="form-group">
         <label class="col-sm-4 control-label">Name</label>
         <div class="col-sm-4">
