--- a/client/partials/recipes/create.html
+++ b/client/partials/recipes/create.html
@@ -1,22 +1,47 @@
 <h1>Create Recipe</h1>
 <form class="form-horizontal" name="postForm" ng-submit="submit_recipe(data.name, data.beertype)" novalidate>
     <div class="form-group">
-        <label class="col-sm-4 control-label">Name</label>
-        <div class="col-sm-4">
-            <input type="text" class="form-control" name="name" placeholder="Recipe Name" ng-model="data.name" required>
-            <p ng-show="postForm.name.$invalid && !postForm.name.$pristine" class="help-block">Recipe Name Required.</p>
+        <div class="row">
+            <label class="col-md-1 control-label">Name</label>
+            <div class="col-md-4">
+                <input type="text" class="form-control" name="name" placeholder="Recipe Name" ng-model="data.name" required>
+                <p ng-show="postForm.name.$invalid && !postForm.name.$pristine" class="help-block">Recipe Name Required.</p>
+            </div>
+            <label class="col-md-2 control-label">Beer Type</label>
+            <div class="col-md-4">
+                <input type="text" class="form-control" name="beertype" placeholder="IPA" ng-model="data.beertype" required>
+                <p ng-show="postForm.beertype.$invalid && !postForm.beertype.$pristine" class="help-block">Beer Type is required</p>
+            </div>
+        </div>
+    </div>
+    <hr />
+    <div class="form-group">
+    <h3>Add Grain Additions</h3>
+        <div class="row">
+            <div class="col-md-1">
+                <label for="weight">Weight</label>
+            </div>
+            <div class="col-md-2">
+                <label for="grain">Grain</label>
+            </div>
+        </div>
+    </div>
+    <div class="form-group" data-ng-repeat="grain in grains">
+        <div class="row">
+            <div class="col-md-1">
+                <input type="text" class="form-control" ng-model="weight.amount" name="" placeholder="lbs">
+            </div>
+            <div class="col-md-3">
+                <input type="text" class="form-control" ng-model="grain.name" name="" placeholder="Enter a grain type">
+            </div>
+            <div class="col-md-2">
+                <button type="button" class="form-control" ng-show="$last" ng-click="addNewGrain()">Add More</button>
+            </div>
         </div>
     </div>
     <div class="form-group">
-        <label class="col-sm-4 control-label">Beer Type</label>
-        <div class="col-sm-4">
-            <input type="text" class="form-control" name="beertype" placeholder="IPA" ng-model="data.beertype" required>
-            <p ng-show="postForm.beertype.$invalid && !postForm.beertype.$pristine" class="help-block">Beer Type is required</p>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-4 col-sm-10">
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
+        <div class="col-md-11">
+        <button type="submit" class="btn btn-primary pull-right">Save</button>
     </div>
 </form>
+</div>
