--- a/client/partials/user/create.html
+++ b/client/partials/user/create.html
@@ -1,4 +1,4 @@
-<h1> TEST </h1>
+<h1> Create A New Account</h1>
 <ul>
     <li ng-repeat="error in errors" class="alert alert-danger">
         {{error}}
