--- a/client/partials/recipes/form.html
+++ b/client/partials/recipes/form.html
@@ -28,8 +28,8 @@
     <ng-form name="grainForm" ng-model="grains">
     <div class="form-group" data-ng-repeat="grain in grains">
         <div class="row">
-            <div class="col-md-1">
-                <input type="text" class="form-control" ng-model="grain.amount" name="" placeholder="lbs">
+            <div class="col-md-2">
+                <input type="number" class="form-control" ng-model="grain.amount" name="amount" placeholder="lbs">
             </div>
             <div class="col-md-3">
                 <select class="form-control" ng-model="grain.name"  ng-options="g.name as g.name for g in grain_options"> </select>
@@ -37,6 +37,7 @@
             <div class="col-md-2">
                 <button type="button" class="form-control" ng-show="$last" ng-click="addNewGrain()">Add More</button>
             </div>
+                {{grain}}
         </div>
     </div>
     </ng-form>
