--- a/client/partials/recipes/form.html
+++ b/client/partials/recipes/form.html
@@ -18,6 +18,8 @@
     <h3>Add Grain Additions</h3>
         <div class="row">
             <div class="col-md-1">
+            </div>
+            <div class="col-md-2">
                 <label for="weight">Weight</label>
             </div>
             <div class="col-md-2">
@@ -28,6 +30,9 @@
     <ng-form name="grainForm" ng-model="grains">
     <div class="form-group" data-ng-repeat="grain in grains">
         <div class="row">
+            <div class="col-md-1">
+                <button type="button" class="btn btn-danger" ng-click="removeGrain(grain)">X</button>
+            </div>
             <div class="col-md-2">
                 <input type="number" class="form-control" ng-model="grain.amount" name="amount" placeholder="lbs">
             </div>
@@ -35,7 +40,7 @@
                 <select class="form-control" ng-model="grain.name"  ng-options="g.name as g.name for g in grain_options"> </select>
             </div>
             <div class="col-md-2">
-                <button type="button" class="form-control" ng-show="$last" ng-click="addNewGrain()">Add More</button>
+                <button type="button" class="btn" ng-show="$last" ng-click="addNewGrain()">Add More</button>
             </div>
         </div>
     </div>
