--- a/client/partials/recipes/form.html
+++ b/client/partials/recipes/form.html
@@ -17,8 +17,6 @@
     <div class="form-group">
     <h3>Add Grain Additions</h3>
         <div class="row">
-            <div class="col-md-1">
-            </div>
             <div class="col-md-2">
                 <label for="weight">Weight</label>
             </div>
@@ -30,17 +28,19 @@
     <ng-form name="grainForm" ng-model="grains">
     <div class="form-group" data-ng-repeat="grain in grains">
         <div class="row">
-            <div class="col-md-1">
-                <button type="button" class="btn btn-danger" ng-click="removeGrain(grain)">X</button>
-            </div>
             <div class="col-md-2">
                 <input type="number" class="form-control" ng-model="grain.amount" name="amount" placeholder="lbs">
             </div>
             <div class="col-md-3">
                 <select class="form-control" ng-model="grain.name"  ng-options="g.name as g.name for g in grain_options"> </select>
             </div>
-            <div class="col-md-2">
-                <button type="button" class="btn" ng-show="$last" ng-click="addNewGrain()">Add More</button>
+            <div class="col-md-1">
+                <button type="button" ng-show="grains.length > 1" class="btn btn-danger" ng-click="removeGrain(grain)">X</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5" style="padding-top: 15px">
+                <button type="button" class="btn pull-right" ng-show="$last" ng-click="addNewGrain()">Add More</button>
             </div>
         </div>
     </div>
