--- a/client/partials/recipes/form.html
+++ b/client/partials/recipes/form.html
@@ -50,6 +50,9 @@
     <h3>Add Hop Additions</h3>
         <div class="row">
             <div class="col-md-2">
+                <label for="weight">Time(min)</label>
+            </div>
+            <div class="col-md-2">
                 <label for="weight">Weight(oz)</label>
             </div>
             <div class="col-md-2">
@@ -60,6 +63,9 @@
     <ng-form name="hopForm" ng-model="hops">
     <div class="form-group" data-ng-repeat="hop in hops">
         <div class="row">
+            <div class="col-md-2">
+                <input type="number" class="form-control" ng-model="hop.time" name="time" placeholder="min">
+            </div>
             <div class="col-md-2">
                 <input type="number" class="form-control" ng-model="hop.amount" name="amount" placeholder="oz">
             </div>
