--- a/client/partials/home/detail.html
+++ b/client/partials/home/detail.html
@@ -1,6 +1,6 @@
 <h1>Recipes</h1>
 <div ng-repeat="recipe in recipes" class="brewday-post">
-    <a id="recipe-{{recipe.id}}" ng-href="#/recipes/{{recipe.id}}/edit">
+    <a id="recipe-{{recipe.id}}" ng-href="#/recipes/{{recipe.id}}/view">
         <p class="brewday-post-title">{{recipe.beer_type}} - {{recipe.name}}</p>
     </a>
     <span>{{recipe.created_at}}</span>
