--- a/client/partials/recipes/form.html
+++ b/client/partials/recipes/form.html
@@ -39,6 +39,10 @@
                     <button type="button" class="btn pull-right" ng-show="$last && !readOnly" ng-click="addNewGrain()">Add More</button>
                 </div>
             </div>
+            <div class="col-md-9" style="padding-top: 15px">
+                <h3>Grain Bill: {{getGrainBill()}}</h3>
+
+            </div>
         </ng-form>
     </div>
 
@@ -81,3 +85,5 @@
         <button type="submit" ng-show="!readOnly" class="btn btn-success pull-right">Save Recipe</button>
     </div>
 </form>
+
+
