add angular ui-router
- updated all routes to work essentially as they did before
- reorganized the nav to work with parent / child obects better

--- a/client/partials/home/detail.html
+++ b/client/partials/home/detail.html
@@ -1,7 +1,1 @@
-<h1>Recipes</h1>
-<div ng-repeat="recipe in recipes" class="brewday-post">
-    <a id="recipe-{{recipe.id}}" ng-href="#/recipes/{{recipe.id}}/view">
-        <p class="brewday-post-title">{{recipe.beer_type}} - {{recipe.name}}</p>
-    </a>
-    <span>{{recipe.created_at}}</span>
-</div>
+<h1> Welcome to Brewday </h1>
