--- a/client/partials/recipes/view.html
+++ b/client/partials/recipes/view.html
@@ -1,6 +1,11 @@
 <div class="row">
-    <h1>{{recipe.name}}</h1>
-    <h3>{{recipe.beer_type}}</h3>
+    <h1>{{recipes.recipe.name}}</h1>
+    <h3>{{recipes.recipe.beer_type}}</h3>
+<div class="form-group">
+    <div class="col-md-11">
+        <a ui-sref="recipes.edit({recipe_id: recipes.recipe.id})" role="button" class="btn btn-primary pull-right">Edit Recipe</a>
+    </div>
+</div>
 </div>
 <div class="col-md-6">
     <ng-form name="grainForm" ng-model="grains">
@@ -13,23 +18,19 @@
                 <label for="grain">Grain</label>
             </div>
         </div>
-        <div class="form-group" data-ng-repeat="grain in grains | orderBy: 'amount': true" >
+        <div class="form-group" data-ng-repeat="grain in recipes.grains | orderBy: 'amount': true" >
             <div class="col-md-3">
-                <input type="number" class="form-control" ng-disabled="{{readOnly}}" ng-model="grain.amount" name="amount" placeholder="lbs">
+                <input type="number" class="form-control" ng-disabled="{{recipes.readOnly}}" ng-model="grain.amount" name="amount" placeholder="lbs">
             </div>
             <div class="col-md-7">
-                <input type="text" class="form-control" ng-disabled="{{readOnly}}" ng-model="grain.name" name="amount" placeholder="lbs">
+                <input type="text" class="form-control" ng-disabled="{{recipes.readOnly}}" ng-model="grain.name" name="amount" placeholder="lbs">
             </div>
             <div class="col-md-2">
-                <button type="button" ng-show="!$first && !readOnly" class="btn btn-danger" ng-click="removeGrain(grain)">X</button>
+                <button type="button" ng-show="!$first && !recipes.readOnly" class="btn btn-danger" ng-click="removeGrain(grain)">X</button>
             </div>
             <div class="col-md-10" style="padding-top: 15px">
-                <button type="button" class="btn pull-right" ng-show="$last && !readOnly" ng-click="addNewGrain()">Add More</button>
+                <button type="button" class="btn pull-right" ng-show="$last && !recipes.readOnly" ng-click="addNewGrain()">Add More</button>
             </div>
-        </div>
-        <div class="col-md-9" style="padding-top: 15px">
-            <h3>Grain Bill: {{getGrainBill()}}</h3>
-
         </div>
     </ng-form>
 </div>
@@ -48,33 +49,28 @@
         </div>
     </div>
 
-    <div class="form-group" data-ng-repeat="hop in hops | orderBy: 'time': true">
+    <div class="form-group" data-ng-repeat="hop in recipes.hops | orderBy: 'time': true">
         <div class="col-md-3">
-            <input type="number" class="form-control" ng-disabled="{{readOnly}}" ng-model="hop.time" name="time" placeholder="min">
+            <input type="number" class="form-control" ng-disabled="{{recipes.readOnly}}" ng-model="hop.time" name="time" placeholder="min">
         </div>
         <div class="col-md-3">
-            <input type="number" class="form-control" ng-disabled="{{readOnly}}" ng-model="hop.amount" name="amount" placeholder="oz">
+            <input type="number" class="form-control" ng-disabled="{{recipes.readOnly}}" ng-model="hop.amount" name="amount" placeholder="oz">
         </div>
         <div class="col-md-5">
-            <input type="text" class="form-control" ng-disabled="{{readOnly}}" ng-model="hop.name" name="amount" placeholder="oz">
+            <input type="text" class="form-control" ng-disabled="{{recipes.readOnly}}" ng-model="hop.name" name="amount" placeholder="oz">
         </div>
         <div class="col-md-1">
-            <button type="button" ng-show="!$first && !readOnly" class="btn btn-danger" ng-click="removeHop(hop)">X</button>
+            <button type="button" ng-show="!$first && !recipes.readOnly" class="btn btn-danger" ng-click="removeHop(hop)">X</button>
         </div>
         <div class="col-md-11" style="padding-top: 15px">
-            <button type="button" class="btn pull-right" ng-show="$last && !readOnly" ng-click="addNewHop()">Add More</button>
+            <button type="button" class="btn pull-right" ng-show="$last && !recipes.readOnly" ng-click="addNewHop()">Add More</button>
         </div>
     </div>
     </ng-form>
 </div>
-<div class="form-group">
-    <div class="col-md-11">
-        <a ui-sref="recipes.edit({recipe_id: recipe.id})" role="button" class="btn btn-primary pull-right">Edit Recipe</a>
-    </div>
-</div>
 <div class="col-md-12">
-    <h3>Grain Bill: {{getGrainBill()}}</h3>
-    <h3>Total Vol: {{totalVol | number }}</h3>
-    <h3>Mash Vol: {{mashVol | number }}</h3>
-    <h3>Sparge Vol: {{spargeVol | number }}</h3>
+    <h3>Grain Bill:{{ recipes.grainBill(recipes.grains) }}</h3>
+    <h3>Total Vol: {{recipes.waterService.totalVol | number }}</h3>
+    <h3>Mash Vol: {{recipes.waterService.mashVol | number }}</h3>
+    <h3>Sparge Vol: {{recipes.waterService.spargeVol | number }}</h3>
 </div>
