--- a/client/partials/recipes/view.html
+++ b/client/partials/recipes/view.html
@@ -70,7 +70,5 @@
 </div>
 <div class="col-md-12">
     <h3>Grain Bill:{{ recipes.grainBill(recipes.grains) }}</h3>
-    <h3>Total Vol: {{recipes.waterService.totalVol | number }}</h3>
-    <h3>Mash Vol: {{recipes.waterService.mashVol | number }}</h3>
-    <h3>Sparge Vol: {{recipes.waterService.spargeVol | number }}</h3>
 </div>
+<water-calculations></water-calculations>
