--- a/client/partials/recipes/form.html
+++ b/client/partials/recipes/form.html
@@ -14,33 +14,7 @@
         </div>
     </div>
     <hr />
-    <div class="col-md-6">
-        <ng-form name="grainForm" ng-model="recipes.grains">
-            <h3>Add Grain Additions</h3>
-            <div class="row">
-                <div class="col-md-3">
-                    <label for="weight">Weight(lbs)</label>
-                </div>
-                <div class="col-md-6">
-                    <label for="grain">Grain</label>
-                </div>
-            </div>
-            <div class="form-group" data-ng-repeat="grain in recipes.grains" >
-                <div class="col-md-3">
-                    <input type="number" class="form-control" ng-disabled="{{readOnly}}" ng-model="grain.amount" name="amount" placeholder="lbs">
-                </div>
-                <div class="col-md-7">
-                    <select class="form-control" ng-model="grain.name" ng-disabled="{{readOnly}}"  ng-options="g.name as g.name for g in recipes.grain_options"> </select>
-                </div>
-                <div class="col-md-2">
-                    <button type="button" ng-show="recipes.grains.length > 1 && !readOnly" class="btn btn-danger" ng-click="recipes.removeGrain(grain)">X</button>
-                </div>
-                <div class="col-md-10" style="padding-top: 15px">
-                    <button type="button" class="btn pull-right" ng-show="$last && !readOnly" ng-click="recipes.addNewGrain()">Add More</button>
-                </div>
-            </div>
-        </ng-form>
-    </div>
+    <grain-list-form grains="recipes.grains"></grain-list-form>
 
     <div class="col-md-6">
         <ng-form name="hopForm" ng-model="recipes.hops">
@@ -65,7 +39,7 @@
                     <input type="number" class="form-control" ng-disabled="{{readOnly}}" ng-model="hop.amount" name="amount" placeholder="oz">
                 </div>
                 <div class="col-md-5">
-                    <select class="form-control" ng-model="hop.name" ng-disabled="{{readOnly}}" ng-options="h.name as h.name for h in recipes.hop_options"> </select>
+                    <select class="form-control" ng-model="hop.name" ng-disabled="{{readOnly}}" ng-options="h.name for h in recipes.hop_options track by h.name"> </select>
                 </div>
                 <div class="col-md-1">
                     <button type="button" ng-show="recipes.hops.length > 1 && !readOnly" class="btn btn-danger" ng-click="recipes.removeHop(hop)">X</button>
