--- a/client/partials/recipes/grainForm.html
+++ b/client/partials/recipes/grainForm.html
@@ -14,7 +14,10 @@
             <input type="number" class="form-control" ng-model="grain.amount" name="amount" placeholder="lbs">
         </div>
         <div class="col-md-7">
-            <select class="form-control" ng-model="grain.name" ng-disabled="{{readOnly}}"  ng-options="g.name for g in grainform.grain_options track by g.name"> </select>
+            <select class="form-control" ng-model="grain.name" ng-disabled="{{readOnly}}">
+                <option
+                        ng-selected="g.name == grain.name" value="{{g.name}}" ng-repeat="g in grainform.grain_options"> {{g.name}} </option>
+            </select>
         </div>
         <div class="col-md-2">
             <button type="button" ng-show="grainform.grains.length > 1 && !readOnly" class="btn btn-danger" ng-click="grainform.removeGrain(grain)">X</button>
