--- a/client/partials/recipes/create.html
+++ b/client/partials/recipes/create.html
@@ -1,3 +1,3 @@
 <h1>Create Recipe</h1>
 <ng-include src="'partials/recipes/form.html'"></ng-include>
-<water-calculations></water-calculations>
+<water-calculations grains="recipes.grains"></water-calculations>
