--- a/client/partials/recipes/view.html
+++ b/client/partials/recipes/view.html
@@ -68,4 +68,4 @@
     </div>
     </ng-form>
 </div>
-<water-calculations></water-calculations>
+<water-calculations grains="recipes.grains"></water-calculations>
