--- a/client/app/recipes/view/view.html
+++ b/client/app/recipes/view/view.html
@@ -1,75 +1,44 @@
-<div class="form-group">
-    <div class="col-md-12">
-        <h1>{{recipes.recipe.name}}</h1>
-        <h3>{{recipes.recipe.beer_type}}</h3>
+<div class="recipe-view">
+    <div class="row">
+        <h3 col-xs-12>{{recipes.recipe.name}}</h3>
+        <h5>{{recipes.recipe.beer_type}}</h5>
     </div>
-    <div class="col-md-2">
+    <div class="row">
         <a ui-sref="recipes.edit({recipe_id: recipes.recipe.id})" role="button" class="btn btn-primary">Edit Recipe</a>
-    </div>
-    <div class="col-md-10">
         <button type="button" class="btn btn-danger" ng-click="recipes.delete(recipes.recipe)">Delete</button>
     </div>
-</div>
-<div class="col-md-6">
-    <ng-form name="grainForm" ng-model="grains">
-        <h3>Grain Additions</h3>
-        <div class="row">
-            <div class="col-md-3">
-                <label for="weight">Weight(lbs)</label>
-            </div>
-            <div class="col-md-6">
-                <label for="grain">Grain</label>
-            </div>
-        </div>
-        <div class="form-group" data-ng-repeat="grain in recipes.grains | orderBy: 'amount': true" >
-            <div class="col-md-3">
-                <input type="number" class="form-control" ng-disabled="{{recipes.readOnly}}" ng-model="grain.amount" name="amount" placeholder="lbs">
-            </div>
-            <div class="col-md-7">
-                <input type="text" class="form-control" ng-disabled="{{recipes.readOnly}}" ng-model="grain.name" name="amount" placeholder="lbs">
-            </div>
-            <div class="col-md-2">
-                <button type="button" ng-show="!$first && !recipes.readOnly" class="btn btn-danger" ng-click="removeGrain(grain)">X</button>
-            </div>
-            <div class="col-md-10" style="padding-top: 15px">
-                <button type="button" class="btn pull-right" ng-show="$last && !recipes.readOnly" ng-click="addNewGrain()">Add More</button>
-            </div>
-        </div>
-    </ng-form>
-</div>
-<div class="col-md-6">
-    <ng-form name="hopForm" ng-model="hops">
-    <h3>Hop Additions</h3>
-    <div class="row">
-        <div class="col-md-3">
-            <label for="weight">Time(min)</label>
-        </div>
-        <div class="col-md-3">
-            <label for="weight">Weight(oz)</label>
-        </div>
-        <div class="col-md-5">
-            <label for="hops">Hops</label>
-        </div>
+<div class="col-xs-12 col-md-6">
+    <div class="panel panel-default">
+        <div class="panel-heading">Grain Additions</div>
+        <table class="table table-condensed table-striped">
+            <tr>
+                <th class="col-xs-2">#</th>
+                <th>Name</th>
+            </tr>
+        <tr data-ng-repeat="grain in recipes.grains | orderBy: 'amount': true" >
+            <td>{{grain.amount}}</td>
+            <td>{{grain.name}}</td>
+        </tr>
+        </table>
     </div>
-
-    <div class="form-group" data-ng-repeat="hop in recipes.hops | orderBy: 'time': true">
-        <div class="col-md-3">
-            <input type="number" class="form-control" ng-disabled="{{recipes.readOnly}}" ng-model="hop.time" name="time" placeholder="min">
-        </div>
-        <div class="col-md-3">
-            <input type="number" class="form-control" ng-disabled="{{recipes.readOnly}}" ng-model="hop.amount" name="amount" placeholder="oz">
-        </div>
-        <div class="col-md-5">
-            <input type="text" class="form-control" ng-disabled="{{recipes.readOnly}}" ng-model="hop.name" name="amount" placeholder="oz">
-        </div>
-        <div class="col-md-1">
-            <button type="button" ng-show="!$first && !recipes.readOnly" class="btn btn-danger" ng-click="removeHop(hop)">X</button>
-        </div>
-        <div class="col-md-11" style="padding-top: 15px">
-            <button type="button" class="btn pull-right" ng-show="$last && !recipes.readOnly" ng-click="addNewHop()">Add More</button>
-        </div>
+</div>
+<div class="col-xs-12 col-md-6">
+    <div class="panel panel-default">
+        <div class="panel-heading">Hop Additions</div>
+        <table class="table table-condensed table-striped">
+            <tr>
+                <th class="col-xs-3">Time</th>
+                <th class="col-xs-2">#</th>
+                <th>Name</th>
+            </tr>
+        <tr data-ng-repeat="hop in recipes.hops| orderBy: 'time': true" >
+            <td class="col-xs-2">{{hop.time}}</td>
+            <td>{{hop.amount}}</td>
+            <td>{{hop.name}}</td>
+        </tr>
+        </table>
     </div>
-    </ng-form>
 </div>
 <equipment-select profile="recipes.recipe.equipment_profile"></equipment-select>
 <water-calculations grains="recipes.grains"></water-calculations>
+</div>
