--- a/client/app/recipes/view/view-hops.html
+++ b/client/app/recipes/view/view-hops.html
@@ -1,17 +1,14 @@
 <div class="col-xs-12 col-md-12">
-    <div class="panel panel-default">
-        <div class="panel-heading">Hop Additions</div>
-        <table css="table table-condensed table-striped">
-            <tr>
-                <th class="col-xs-3">Time</th>
-                <th class="col-xs-2">#</th>
-                <th>Name</th>
-            </tr>
-            <tr data-ng-repeat="hop in vm.hops | orderBy: 'time': true" >
-                <td class="col-xs-2">{{hop.time}}</td>
-                <td>{{hop.amount}}</td>
-                <td>{{hop.name}}</td>
-            </tr>
-        </table>
-    </div>
+    <table css="table table-condensed table-striped">
+        <tr>
+            <th class="col-xs-3">Time</th>
+            <th class="col-xs-2">Weight</th>
+            <th>Name</th>
+        </tr>
+        <tr data-ng-repeat="hop in vm.hops | orderBy: 'time': true" >
+            <td class="col-xs-2">{{hop.time}}</td>
+            <td>{{hop.amount}}</td>
+            <td>{{hop.name}}</td>
+        </tr>
+    </table>
 </div>
