--- a/client/app/recipes/view/view.html
+++ b/client/app/recipes/view/view.html
@@ -1,11 +1,12 @@
 <div class="recipe-view">
+    <h3 col-xs-12><center>{{vm.recipe.name}}</center></h3>
     <div class="row">
-        <h3 col-xs-12>{{vm.recipe.name}}</h3>
-        <h5>{{vm.recipe.beer_type}}</h5>
-    </div>
-    <div class="row">
-        <a ui-sref="recipes.edit({recipe_id: vm.recipe.id})" role="button" class="btn btn-primary">Edit Recipe</a>
-        <button type="button" class="btn btn-danger" ng-click="vm.delete(vm.recipe)">Delete</button>
+        <a ui-sref="recipes.edit({recipe_id: vm.recipe.id})" role="button" class="btn btn-primary">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+        </a>
+        <button type="button" class="btn btn-danger" ng-click="vm.delete(vm.recipe)">
+            <span class="glyphicon glyphicon glyphicon-remove-circle"></span>
+        </button>
     </div>
     <div class="row">
         <tabset class="hidden-xs">
@@ -14,12 +15,10 @@
         </tab>
         </tabset>
 
-        <accordion class="visible-xs" close-others="oneAtATime">
+        <accordion class="visible-xs " close-others="oneAtATime">
         <accordion-group heading="{{tab.title}}" is-open="tab.active" ng-repeat="tab in vm.tabs">
             <div ng-include="tab.template"></div>
         </accordion-group>
         </accordion>
     </div>
-    <equipment-select profile="vm.recipe.equipment_profile"></equipment-select>
-    <water-calculations grains="vm.grains"></water-calculations>
 </div>
