--- a/client/app/recipes/view/view.html
+++ b/client/app/recipes/view/view.html
@@ -1,11 +1,11 @@
 <div class="recipe-view">
     <h3 col-xs-12><center>{{vm.recipe.name}}</center></h3>
     <div class="row">
-        <a ui-sref="recipes.edit({recipe_id: vm.recipe.id})" role="button" class="btn btn-primary">
+        <a ui-sref="recipes.edit({recipe_id: vm.recipe.id})" role="button" class="btn btn-primary" aria-label="Edit Recipe">
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </a>
-        <button type="button" class="btn btn-danger" ng-click="vm.delete(vm.recipe)">
-            <span class="glyphicon glyphicon glyphicon-remove-circle"></span>
+        <button type="button" class="btn btn-danger" ng-click="vm.delete(vm.recipe)" aria-label="Delete Recipe">
+            <span class="glyphicon glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
         </button>
     </div>
     <div class="row">
